# embedpy

./: CMakeLists.txt  README.rst  processplugin.py  processplugin_python.cpp  processplugin_python.h  test_program.cpp
cmake/: FindNumpy.cmake  README.rst
